[project]
name = "media-app"
version = "0.1.0"
description = "Media — shared asset storage (binaries + sha256 dedup)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "pillow>=10.4.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
